<resources>
    <string name="app_name">ReactionTest</string>
    <string name="app_version">Version 1.0.8</string>
    <string name="start_reaction_test">Start reaction test</string>
    <string name="go_game">Reaction Game</string>
    <string name="reaction_game">Reaction Game</string>
    <string name="exported_at">exportiert am</string>
    <string name="share">Teilen</string>
    <string name="go_no_go_game">Go-No-Go-Game</string>
    <string name="click">Click!</string>
    <string name="attention">Wait for blue...</string>
    <string name="add_medical_user">Add Medical User</string>
    <string name="medical_user_id">Type in the Medico Id</string>
    <string name="touch_to_pick_date">Touch here to select a date</string>
    <string name="birthdate">Birth</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="add_operation_issue">Add Operation Issue</string>
    <string name="gender">Gender</string>
    <string name="creation_time">Creation Time</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bmi">BMI</string>
    <string name="id">ID</string>
    <string name="user_management">User Management</string>
    <string name="no_user_in_db">There is no user</string>
    <string name="operation_issue_name">Operation</string>
    <string name="game_type">Game type</string>
    <string name="test_type">Test type</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="auto_genrated">Auto generated</string>
    <string name="average_reaction_time">average</string>
    <string name="reaction_times">Reaction Times</string>
    <string name="average">average</string>
    <string name="median">median</string>
    <string name="tries">tries</string>
    <string name="rating">rating</string>
    <string name="placeholder_minus">-</string>
    <string name="best_reaction_time">Best Reaction Time</string>
    <string name="retry">Retry</string>
    <string name="finish">Finish</string>
    <string name="information">Information</string>
    <string name="medicaments">Medicaments</string>
    <string name="statistics">Statistics</string>
    <string name="operation_date">Operation Date</string>
    <string name="intubation">Intubation</string>
    <string name="touch_to_pick_time">Touch to pick time</string>
    <string name="wakeup_time">Wake Up Time</string>
    <string name="create_automatic">Create Automatically</string>
    <string name="no_operation_issue">No Operation Issue found</string>
    <string name="go_game_settings">Reaction Test Settings</string>
    <string name="set_go_game_reaction_test_count_per_game">Set try count per game</string>
    <string name="settings">Settings</string>
    <string name="pre_operation">Pre Operation</string>
    <string name="pre_operation_performance">Pre-Operational Performance</string>
    <string name="in_operation">Operation</string>
    <string name="post_operation">Post Operation</string>
    <string name="trial">Trial</string>
    <string name="click_to_select_a_date">select a date</string>
    <string name="no_medicament_in_db">No medicaments yet</string>
    <string name="go_no_go_settings">Go-No-Go-Game Settings</string>
    <string name="operation_mode">Operation Mode</string>
    <string name="operation_type">Operation Type</string>
    <string name="next_game_estimated_in">next test</string>
    <string name="make_a_new_try">next test: now!</string>
    <string name="set_go_no_go_game_count_down_count">Set count down value</string>
    <string name="set_go_no_go_game_wrong_state_duration">Set wrong state duration</string>
    <string name="do_not_click">Do not click!</string>
    <string name="no_medical_id">Medical ID is missing.</string>
    <string name="delete">Delete</string>
    <string name="wrong_moment">Wrong moment.</string>
    <string name="new_try">New Try</string>
    <string name="no_failures_to_display">No failures in database</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set_go_game_max_random_waiting_time">Set max. random attention time</string>
    <string name="label">Label</string>
    <string name="add_audio">Record Audio Message</string>
    <string name="add_note">Add Note</string>
    <string name="add_reaction_test">Add Reaction Test</string>
    <string name="add_event">Add Event</string>
    <string name="cancel">Cancel</string>
    <string name="extubation">Extubation</string>
    <string name="wakeup">Wake Up</string>
    <string name="event_type">Event Type</string>
    <string name="events">Events</string>
    <string name="note">Note</string>
    <string name="add_note_description">Add a simple note to this event.</string>
    <string name="intubation_description">Set Intubation time of the patient.</string>
    <string name="extubation_description">Set the Extubation time of the patient.</string>
    <string name="wakeup_time_description">Set  the Wake Up time of the patient.</string>
    <string name="go_game_description">This game type checks the patient\'s response time, by changing the color of the display. The patient needs to react to the change as quickly as possible.</string>
    <string name="go_no_go_game_description">This game tests the patient\'s response, by changing the color of the display. The patient needs to react to the change as quickly as possible . Attention , the patient is allowed to react if the app tells him to do so.</string>
    <string name="pre_operation_description">This test type should be selected before the operation starts.</string>
    <string name="post_operation_description">This test type should be selected after the operation of the patient.</string>
    <string name="trial_description">Simple test. This type of test is to be selected for testing and familiarization of patients.</string>
    <string name="in_operation_description">This test type should be selected as soon as the brain surgery starts.</string>
    <string name="sedation">Sedation</string>
    <string name="sedation_description">During the sedation, the patient is relaxed, does not suffer pain, or fear or anxiety and is completely calm.</string>
    <string name="oclock">o\'clock</string>
    <string name="edit_event">Edit Event</string>
    <string name="agree">Agree</string>
    <string name="delete_event">Attention! You want to delete the selected event?</string>
    <string name="play_audio">Play audio message</string>
    <string name="at">at</string>
    <string name="reaction_test_with_following_time">Reaction Time</string>
    <string name="reaction_performance">Average RT Performance</string>
    <string name="forecast_performance">Median RT Performance with Forecast</string>
    <string name="operation_timeline">Operation Timeline</string>
    <string name="in_operation_settings">In-Operation Settings</string>
    <string name="vibration_duration_in_millis">Vibration alarm duration</string>
    <string name="operation_mode_next_reaction_test_countdown_text">Set alarm every x minutes</string>
    <string name="its_time_to_make_a_reaction_test">It is time again to make a new reaction test, because the time is up.</string>
    <string name="later">Later</string>
    <string name="seconds">sec</string>
    <string name="delete_trial">Delete trial</string>
    <string name="delete_trial_description">Attention! Do you really want to delete this reaction test?</string>
    <string name="please_create_user_before_use_app">You need to add new user to be able to use the app.</string>
    <string name="select_user">Select user</string>
    <string name="ok">Ok</string>
    <string name="do_you_want_to_leave_the_app">Do you really want to leave the app?</string>
    <string name="operation_finished">Operation Finished</string>
    <string name="operation_finished_description">Select this in order to set ending of the operation.</string>
    <string name="there_is_no_preoperation_reaction_test">No pre operation test found.</string>
    <string name="threshold_value">Threshold Value</string>
    <string name="medicament">Medicament</string>
    <string name="unit">Unit</string>
    <string name="dose">Dose</string>
    <string name="time">Time</string>
    <string name="add_new_medicament">Add new medicament</string>
    <string name="edit">Edit</string>
    <string name="export_csv">Export CSV</string>
    <string name="export_excel">Export Excel</string>
    <string name="share_using">Share using?</string>
    <string name="results">results for:</string>
    <string name="operation_started">Operation Started</string>
    <string name="really_delete_user">Do you really want to delete the user?</string>
    <string name="propofol">Propofol</string>
    <string name="remifentanil">Remifentanil</string>
    <string name="urapidil">Urapidil</string>
    <string name="hydralazin">Hydralazin</string>
    <string name="midazolam">Midazolam</string>
    <string name="lorazepam">Lorazepam</string>
    <string name="Diazepam">Diazepam</string>
    <string name="metoprolol">Metoprolol</string>
    <string name="amiodaron">Amiodaron</string>
    <string name="show_deleted_users">Show deleted users</string>
    <string name="cramp">Cramp</string>
    <string name="cramp_description">The patient gets a convulsion</string>
    <string name="narcosis_stop">Narcosis stop</string>
    <string name="norcosis_stop_description">The Narcosis has been stopped now</string>
    <string name="too_early">Too early!</string>
    <string name="title_activity_start_menu">StartMenu</string>
    <string name="import_file">Import file</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="export_json">Export JSON</string>
    <string name="edit_user">Edit user</string>
    <string name="show_awake_survey">Show awake survey after each RT test</string>
    <string name="milliseconds">ms</string>
    <string name="estimation_of_alertness">Estimation of Alertness</string>
    <string name="skala">Skala</string>
    <string name="description">Description</string>
    <string name="awake_and_motivated">Der Patient ist wach, hoch motiviert und kann seine Aufgabe ausführen..</string>
    <string name="just_awake">Der Patient ist wach und kann seine Aufgabe ausführen.</string>
    <string name="awake_and_follow">Der Patient ist wach und kann der Aufforderungen folgen (die Hand heben)</string>
    <string name="not_awake_and_not_follow">Der Patient ist nicht richtig wach und kann der Aufgaben nicht folgen (z.B. kann nicht den eigenen Namen nennen)</string>
    <string name="cancel_because_aggressive_or_not_awake">Wachkraniotomie wurde abgebrochen, weil der Patient aggressiv, oder nicht wach geblieben ist.</string>
    <string name="inputoutput">IO</string>
    <string name="scenario_cowboy">Cowboy</string>
    <string name="scenario_colors_only">Colors only</string>
    <string name="select_favourite_scenario">Select your favourite scenario template</string>
    <string name="scenario">Scenario</string>
    <string name="set_reaction_test_count_per_operation">Set reaction test count per operation</string>
    <string name="median_performance">Median Performance</string>
    <string name="median_performance_forecast">Forecast next Median Performance</string>
    <string name="good">good</string>
    <string name="bad">bad</string>
    <string name="critical">critical</string>
    <string name="placeholder" />
    <string name="question_degree_celsius">"°C"</string>
    <string name="temperature">temperature</string>
    <string name="brain_temperature">Brain Temperature</string>
    <string name="sessions">Sessions</string>
</resources>
