<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/ic_account_circle_black_36dp"
            android:title="@string/user_management" />
        <item
            android:id="@+id/nav_medicaments"
            android:icon="@drawable/ic_library_add_black_36dp"
            android:title="@string/medicaments" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_timeline_black_36dp"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_operation"
            android:icon="@drawable/ic_alarm_black_18dp"
            android:title="@string/operation_mode" />
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/settings" />
            </menu>
        </item>
        <item android:title="@string/inputoutput">
            <menu>
                <item
                    android:id="@+id/nav_import"
                    android:icon="@drawable/ic_file_upload_black_24dp"
                    android:title="@string/import_file" />

                <item
                    android:id="@+id/nav_export"
                    android:icon="@drawable/ic_file_download_black_24dp"
                    android:title="@string/export_csv" />

            </menu>
        </item>
    </group>

</menu>
