<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/go_game_settings">
        <com.artursworld.reactiontest.view.dialogs.NumberPickerPreference
            android:defaultValue="3"
            android:key="go_game_tries_per_game"
            android:title="@string/set_go_game_reaction_test_count_per_game" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/go_no_go_settings">

        <com.artursworld.reactiontest.view.dialogs.NumberPickerPreference
            android:defaultValue="3"
            android:key="@string/go_no_go_game_tries_per_game"
            android:title="@string/set_go_game_reaction_test_count_per_game" />
    </PreferenceCategory>


</PreferenceScreen>