<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.artursworld.reactiontest.view.user.AddMedicalUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_medical_user_label"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/add_medical_user" />

        <EditText
            android:id="@+id/add_medical_user_medico_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/add_medical_user_label"
            android:hint="@string/medical_user_id"
            android:inputType="text" />

        <TextView
            android:id="@+id/birthdate_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/add_medical_user_medico_id"
            android:layout_marginTop="20dp"
            android:text="@string/birthdate" />

        <EditText
            android:id="@+id/add_medical_user_birthdate_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/birthdate_label"
            android:hint="@string/touch_to_pick_date" />

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/add_medical_user_birthdate_txt"
            android:layout_marginTop="20dp"
            android:text="@string/gender" />

        <EditText
            android:id="@+id/start_game_settings_operation_issue_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/gender_label"
            android:inputType="textAutoComplete"
            android:hint="@string/male"
            android:windowSoftInputMode="stateHidden" />

        <TextView
            android:id="@+id/add_medical_user_bmi_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/start_game_settings_operation_issue_selector"
            android:layout_marginTop="20dp"
            android:text="@string/bmi" />

        <EditText
            android:id="@+id/add_medical_user_bmi_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/add_medical_user_bmi_label"
            android:inputType="numberDecimal" />


        <Button
            android:id="@+id/add_medical_user_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/add_medical_user_bmi_txt"
            android:onClick="onAddUserButtonClick"
            android:text="@string/add_medical_user" />

    </RelativeLayout>
</ScrollView>
