<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/medical_user_information_adapter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/operation_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/medical_user_information_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medical_user_information_adapter_text"
        android:hint="@string/touch_to_pick_date"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/medical_user_information_intubation_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medical_user_information_date"
        android:text="@string/intubation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/medical_user_information_intubation_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medical_user_information_intubation_txt"
        android:hint="@string/touch_to_pick_time"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/medical_user_information_wakeup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medical_user_information_intubation_time"
        android:text="@string/wakeup_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/medical_user_information_wakeup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medical_user_information_wakeup_txt"
        android:hint="@string/touch_to_pick_time"
        android:textColor="@color/colorPrimary" />


</RelativeLayout>
