<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/event_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/event_type" />

    <Spinner
        android:id="@+id/event_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_type_label"
        android:layout_margin="5dp"
        android:labelFor="@string/event_type" />

    <EditText
        android:id="@+id/event_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_type_spinner"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/ic_alarm_black_18dp"
        android:hint="@string/touch_to_pick_time" />

    <!--
    <com.artursworld.reactiontest.controller.helper.IconEditText
        android:id="@+id/event_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_type_spinner"
        android:layout_margin="5dp"
        widget:hint="@string/touch_to_pick_time"
        widget:iconSrc="@drawable/male_icon"
        widget:isPassword="false" />
    -->

    <EditText
        android:id="@+id/event_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_time_picker"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/ic_event_note_black_18dp"
        android:hint="@string/add_note" />


</RelativeLayout>